# zyscan

./: README.md
code/: .gitignore  Cargo.toml  Makefile
code/src/: config.rs  main.rs
code/src_py/: classify.py  query.py
db/: docker-compose.yml
rust_backend/: .gitignore  Cargo.toml  Makefile  todo.md
rust_backend/assests/annotations/: classes.json  parse.py
rust_backend/src/: config.rs  image.rs  main.rs  scan_im.rs
rust_backend/src_py/: classify.py  query.py
