[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mongodb = "2.3.1"
serde = "1.0.152"
confy = "0.3.1"
kamadak-exif = "0.5.5"
actix-rt = "2.8.0"
async-recursion = "1.0.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.10.0"
opencv = "0.77.0"
serde_json = "1.0.93"
actix-files = "0.6.2"
futures = "0.3.26"
chrono = "0.4.23"
bson = "2.5.0"
